removed test files from repository

--- a/src/home.html
+++ b/src/home.html
@@ -31,13 +31,13 @@
             <div class="slider-container">
                 <!-- Slides -->
                 <div class="slide fade">
-                    <img src="images/slide1.jpg" alt="Taekwondo Training">
+                    <img src="sliderimages/slide1.jpg" alt="Taekwondo Training">
                 </div>
                 <div class="slide fade">
-                    <img src="images/slide2.jpg" alt="Taekwondo Students">
+                    <img src="sliderimages/slide2.jpg" alt="Taekwondo Students">
                 </div>
                 <div class="slide fade">
-                    <img src="images/slide3.jpg" alt="Black Belt Ceremony">
+                    <img src="sliderimages/slide3.jpg" alt="Black Belt Ceremony">
                 </div>
             </div>
 
