finalized slider changes and homepage container

--- a/src/home.html
+++ b/src/home.html
@@ -29,17 +29,25 @@
         <section class="slider">
             <div class="slider-container">
                 <div class="slide fade">
-                    <img src="sliderimages/slide1.jpg" alt="Taekwondo Training">
+                    <img src="sliderimages/slide3.jpg" alt="Taekwondo Training">
+                </div>
+                <div class="slide fade">
+                    <img src="sliderimages/courtesy.png" alt="Taekwondo Students">
+                </div>
+                <div class="slide fade">
+                    <img src="sliderimages/slide3.jpg" alt="Black Belt Ceremony">
                 </div>
                 <div class="slide fade">
                     <img src="sliderimages/slide2.jpg" alt="Taekwondo Students">
                 </div>
                 <div class="slide fade">
-                    <img src="sliderimages/slide3.jpg" alt="Black Belt Ceremony">
+                    <img src="sliderimages/slide3.jpg" alt="Taekwondo Students">
                 </div>
             </div>
 
             <div class="dots-container">
+                <span class="dot"></span>
+                <span class="dot"></span>
                 <span class="dot"></span>
                 <span class="dot"></span>
                 <span class="dot"></span>
