added korean symbols for home page

--- a/src/home.html
+++ b/src/home.html
@@ -23,7 +23,12 @@
     </header>
     <main>
         <section>
-            <h1>Welcome to Taekwondo World</h1>
+            <img src="sliderimages/courtesy.svg" alt="" class="korean-symbol">
+            <img src="sliderimages/integrity.svg" alt="" class="korean-symbol">
+            <img src="sliderimages/perseverence.svg" alt="" class="korean-symbol">
+            <img src="sliderimages/self-control.svg" alt="" class="korean-symbol">
+            <img src="sliderimages/indominable-spirit.svg" alt="" id="korean-symbol-small">
+            <h1>Welcome to Taekwondo Website Test</h1>
             <p>Content goes here...</p>
         </section>
         <section class="slider">
@@ -32,7 +37,7 @@
                     <img src="sliderimages/slide3.jpg" alt="Taekwondo Training">
                 </div>
                 <div class="slide fade">
-                    <img src="sliderimages/courtesy.png" alt="Taekwondo Students">
+                    <img src="sliderimages/slide2.jpg" alt="Taekwondo Students">
                 </div>
                 <div class="slide fade">
                     <img src="sliderimages/slide3.jpg" alt="Black Belt Ceremony">
