--- a/src/home.html
+++ b/src/home.html
@@ -11,8 +11,8 @@
             <div class="logo">Taekwondo Club</div>
             <ul class="nav-links">
                 <li><a href="home.html">Home</a></li>
-                <li><a href="join-now.html">Join Now!</a></li>
-                <li><a href="curriculum.html">Classes</a></li>
+                <li><a href="join-now.html">Classes</a></li>
+                <li><a href="curriculum.html">Curriculum</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -22,15 +22,34 @@
         </nav>
     </header>
     <main>
-        <section>
-            <img src="sliderimages/courtesy.svg" alt="" class="korean-symbol">
-            <img src="sliderimages/integrity.svg" alt="" class="korean-symbol">
-            <img src="sliderimages/perseverence.svg" alt="" class="korean-symbol">
-            <img src="sliderimages/self-control.svg" alt="" class="korean-symbol">
-            <img src="sliderimages/indominable-spirit.svg" alt="" id="korean-symbol-small">
-            <h1>Welcome to Taekwondo Website Test</h1>
-            <p>Content goes here...</p>
+        <section class="main-heading">
+            <p class="homepage-tagline">Your Martial Arts Journey <br>Starts Here</p>
+            <p class="homepage-tagline-description">Our Dojang is full of talented, friendly and aspiring martial artists.<br> Be the next to join?</p>
+            <a href="join-now.html"><button class="join-now-btn">Join Now</button></a>
         </section>
+        <section class="second-home-heading">Welcome to Taekwondo Club in Taekwondo Place!</section>
+        <section class="taekwondo-tenets">
+            <div class="tenet">
+                <img src="sliderimages/courtesy.svg" alt="" class="korean-symbol">
+                <p>Courtesy</p>
+            </div>
+            <div class="tenet">
+                <img src="sliderimages/integrity.svg" alt="" class="korean-symbol">
+                <p>Integrity</p>
+            </div>
+            <div class="tenet">
+                <img src="sliderimages/perseverence.svg" alt="" class="korean-symbol">
+                <p>Perseverence</p>
+            </div>
+            <div class="tenet">
+                <img src="sliderimages/self-control.svg" alt="" class="korean-symbol">
+                <p>Self Control</p>
+            </div>
+            <div class="tenet">
+                <img src="sliderimages/indominable-spirit.svg" alt="" id="korean-symbol-small">
+                <p>Indominable Spirit</p>
+            </div>
+        </section>  
         <section class="slider">
             <div class="slider-container">
                 <div class="slide fade">
