--- a/src/login.html
+++ b/src/login.html
@@ -11,8 +11,8 @@
             <div class="logo">Taekwondo Club</div>
             <ul class="nav-links">
                 <li><a href="home.html">Home</a></li>
-                <li><a href="join-now.html">Join Now!</a></li>
-                <li><a href="curriculum.html">Classes</a></li>
+                <li><a href="join-now.html">Classes</a></li>
+                <li><a href="curriculum.html">Curriculum</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
