fixed container sizing for homepage

--- a/src/home.html
+++ b/src/home.html
@@ -27,6 +27,8 @@
             <p class="homepage-tagline-description">Our Dojang is full of talented, friendly and aspiring martial artists.<br> Be the next to join?</p>
             <a href="join-now.html"><button class="join-now-btn">Join Now</button></a>
         </section>
+    </main>
+    <div class="lower-homepage"> 
         <section class="second-home-heading">Welcome to Taekwondo Club in Taekwondo Place!</section>
         <section class="taekwondo-tenets">
             <div class="tenet">
@@ -49,7 +51,7 @@
                 <img src="sliderimages/indominable-spirit.svg" alt="" id="korean-symbol-small">
                 <p>Indominable Spirit</p>
             </div>
-        </section>  
+        </section>
         <section class="slider">
             <div class="slider-container">
                 <div class="slide fade">
@@ -77,6 +79,6 @@
                 <span class="dot"></span>
             </div>
         </section>
-    </main>
+    </div> 
 </body>
 </html>
