--- a/src/home.html
+++ b/src/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Taekwondo Club</title>
 </head>
 <body>
     <header>
