--- a/src/sign-up.html
+++ b/src/sign-up.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign-Up Form</title>
+    <title>Document</title>
 </head>
 <body>
     <header>
@@ -21,6 +21,11 @@
             </div>
         </nav>
     </header>
-
+    <main>
+        <section>
+            <h1>SHOP</h1>
+            <p>Content goes here...</p>
+        </section>
+    </main>
 </body>
 </html>
